# sistemas_inteligentes

./: .gitignore  README.md  pyproject.toml
commons/: utils.py
files/: 10.csv  20.csv  5.csv  50.csv  treino_sinais_vitais_com_label.txt  treino_sinais_vitais_sem_label.txt
genetic/: genetic.py
machine_learning/: commons.py  decision_tree_c4_5.py  decision_tree_id3.py  multilayer_perceptron.py  random_forest.py  utils.py
simulated_annealing/: simulated_annealing.py
symbolic_models/: commons.py  decision_tree.py  decision_tree_c4_5.py  decision_tree_commons.py  decision_tree_id3.py  multilayer_perceptron.py  random_forest.py  trab2.py  utils.py
