[project]
name = "sistemas-inteligentes-trab-1"
version = "0.1.0"
description = "Projeto de Sistemas Inteligentes"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.0.2,<3.0.0",
    "matplotlib>=3.10.6,<4.0.0",
    "pandas (>=2.3.3,<3.0.0)",
    "graphviz (>=0.21,<0.22)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
